Attempting to fix dark mode issue
Based on https://github.com/BDHU/minimalist/pull/9/commits/2771e99f262eb08ba57e30e1dd6baadf75e56af4

--- a/_sass/rouge-github.scss
+++ b/_sass/rouge-github.scss
@@ -203,7 +203,7 @@
   color: #008080;
 }
 .highlight .ow {
-  color: #758ba8;
+  color: var(--clr-code-bold-text);
   font-weight: bold;
 }
 .highlight .o {
